add_subdirectory(matlab)
add_subdirectory(wrapper)
	
IF(ROYALE_INSTALL_TO_MATLAB_FOLDER)
  INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/matlab_debug/" DESTINATION "${ROYALE_INSTALL_MATLAB_EXAMPLE_DIR}" CONFIGURATIONS Debug)
  INSTALL(FILES ${CMAKE_INSTALL_SYSTEM_RUNTIME_LIBS} DESTINATION "${ROYALE_INSTALL_MATLAB_EXAMPLE_DIR}/+royale" COMPONENT Libraries)
ENDIF()
